[project]
name = "langgraph-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EngineerAbdulQadir", email = "abdulqadirimran001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.74",
    "litellm>=1.61.11",
    "python-dotenv>=1.0.1",
]

[project.scripts]
langgraph-flow = "langgraph_flow:main"
simpleflow = "langgraph_flow.simpleflow:run_chain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
